--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "drivers/staging/kernelsu"]
 	path = drivers/staging/kernelsu
-	url = https://github.com/tiann/KernelSU.git
+	url = https://github.com/yamleaf/KernelSU.git
